# TestAndroid

./: README.md  build.gradle  gradle.properties  settings.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: local.html
app/src/main/cpp/: CMakeLists.txt  hot-fix.cpp  native-lib.cpp
app/src/main/java/com/example/wangzheng/: ActivityHandler.java  App.java  ExceptionProcessor.java  HotFixMethod.java  I.java  Main.java  Textkit.java  UncaughtExceptionHandler.java
app/src/main/java/com/example/wangzheng/adapter/: LoopPagerAdapter.java  PictureAdapter.java
app/src/main/java/com/example/wangzheng/album/: AlbumFactory.java  BrowsePictureActivity.java  Builder.java  FloderBean.java  PictureBean.java
app/src/main/java/com/example/wangzheng/binder/: AidlInterface.java  BinderCursor.java  BinderParcel.java  ProcessProvider.java  RemoteService.java  SimpleContentProvider.java
app/src/main/java/com/example/wangzheng/common/: ActivityLifecycle.java  ActivityStack.java  AndroidScheduler.java  Api.java  AppLifecycleMonitor.java  AsyncRun.java  BaseMultiRecyclerAdapter.java  BaseRecyclerAdapter.java  BaseViewGroup.java  BasicAdapter.java  BitmapKit.java  BlockUploader.java  BoundedBuffer.java  BroadcastKit.java  Call.java  CallHandler.java  Callable.java  CommonKit.java  CornersTransform.java  CountDownTimer.java  DateKit.java  Debounced.java  DeviceKit.java  DividerItemDecoration.java  FileKit.java  FrequeController.java  GlobalGlideConfig.java  GridItemDecoration.java  IoKit.java  Lazy.java  (+26 more)
app/src/main/res/anim/: anim_bottom_in.xml  anim_bottom_out.xml
app/src/main/res/drawable/: input_container_border.xml  linearlayout_horizonal_divider.xml  linearlayout_vertical_divider.xml  progress_bg.xml  progress_drawable.xml  send_input_bg.xml  switch_input_selector.xml
app/src/main/res/layout/: activity_browes_picture_layout.xml  activity_chatting_layout.xml  activity_ffmpeg_layout.xml  activity_main_layout.xml  activity_nested_scroll_header.xml  activity_nested_scroll_layout.xml  activity_test_layout.xml  activity_test_picture_layout.xml  activity_test_recycler_view_layout.xml  activity_web_view_layout.xml  default_empty_layout.xml  default_failed_layout.xml  default_loading_layout.xml  dialog_multi_input_layout.xml  dialog_multi_input_layout1.xml  item_zoom_image_view.xml  layout_input_bar.xml  layout_multi_container.xml  layout_nested_scroll_header.xml  merge_panel_content.xml  recycler_view_item_test_layout.xml  simple_text_tip_layout.xml  test_layout.xml  xml2bitmap.xml
app/src/main/res/layout-v17/: my_daydream.xml
app/src/main/res/raw/: segment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml  vpi_attrs.xml
app/src/main/res/values-v19/: dimens.xml  styles.xml
app/src/main/res/xml/: my_dream.xml  network_security_config.xml
(+228 files in other folders)
